k8s-overview/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fResult-deployment
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: fResult-pod
  template:
    metadata:
      labels:
        app: fResult-pod
    spec:
      containers:
      - image: nginx
        name: fResult-nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
