k8s-overview/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fResult-nginx-service
spec:
  selector:
    app: fResult-nginx-pod
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  type: ClusterIP
