k8s-overview/gateway.yml
# https://kubernetes.io/docs/concepts/services-networking/gateway/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: fResult-nginx-ingress
  # labels:
    # name: fResult-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fResult-nginx-service
              port:
                number: 8080
